--- a/css/delete.css
+++ b/css/delete.css
@@ -1,41 +1,49 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
-    margin: 0;
-     
-}
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
-    border: solid black;
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@100;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+table{
+    /* margin-left: 5px !important; */
+    margin-left: 0px !important;
 }
 
-p {
-    color: #555;
-    margin-left: 200px;
+body{
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Work Sans', sans-serif;
+    /* background-color: #D8D9DA; */
 }
-/* form {
-    margin-top: 20px; */
-
-button {
-    background-color: #f44336;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
+.container{
+    margin-left: 5px !important;
+}
+input{
+    width: 600px !important;
+}
+.invoice-btns{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+.invoice-btn{
+    padding: 3px 9px;
+    color: var(--dark-color);
+    font-family:inherit ;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    margin-left: 200px;
 }
-a {
+table{
+    font-size: 14px;
+}
+h2{
+     font-family: 'Poppins', sans-serif;
+}
+
+#registernew{
+    border:1px solid groove;
+    float: right;
+    background-color: #395464;
+    padding: 5px;
+    color: white;
     text-decoration: none;
-    color: #333;
-    margin-left: 10px;
-    margin-left: 200px;
-    
+    margin-top: -40px;
+    font-size: 16px;
+    border-radius: 5px;
 }
+
